--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 		"outDir": "./build",
 		"esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
 		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
+		"types": ["node","jest"]
 	},
 	"ts-node": {
 		"esm": true,
